# SensorFusion_INS

./: CMakeLists.txt  README.md  package.xml
GPS-IMU/: CMakeLists.txt  README.md  package.xml
GPS-IMU/config/: IRAP_CONFIG.yaml  Params_KITTI.yaml  Params_PHAROS.yaml  Params_Sensor_KITTI.yaml
GPS-IMU/include/: utility.h
GPS-IMU/launch/: LAUNCH-PKG.launch
GPS-IMU/msg/: cloud_info.msg
GPS-IMU/src/: SensorFusion_GPSINS.cpp
config/: KITTI_CONFIG.yaml
include/: utility.h
launch/: LAUNCH-PKG.launch
launch/include/config/: robot.urdf.xacro  rviz.rviz
